--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+# arduino IDE build
+build
+
+# Notepad++ backups
+*.bak
+**/nppBackup
+
+# manual backups
+**/old
+*.zip
+
+# only for this project - no old info files...
+infos.ods
+
+## C & CPP things
+
 # Compiled Object files
 *.slo
 *.lo
@@ -26,3 +42,47 @@
 *.exe
 *.out
 *.app
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# =========================
+# Operating System Files
+# =========================
+
+# OSX
+# =========================
+
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
