--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=slight_RotaryEncoder
-version=0.3.0
-author=Stefan Krüger (s-light) <github@s-light.eu>
-maintainer=Stefan Krüger <github@s-light.eu>
+version=1.0.0
+author=Stefan Krüger (s-light) <git@s-light.eu>
+maintainer=Stefan Krüger <git@s-light.eu>
 sentence=Event based rotary ecnoder input.
-paragraph=Get rotary encoder inputs as events in a callback-funciton.
+paragraph=Get rotary encoder inputs as events in a callback-function.
 category=Signal Input/Output
 url=https://github.com/s-light/slight_TLC5957
 architectures=*
